# macroquad-mech-2025

./: .gitignore  2025-09-03-were-going-to-work-on-improving-the-mechanics-aro.txt  AI_DEBUG_CLIENT.md  AI_IMPLEMENTATION.md  AI_TESTING_DEV_LOG.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  Cargo.toml  MACROQUAD_NO_WASM_BINDGEN.md  MACROQUAD_WASM_PATCHES.md  MIGRATION_TO_TRUNK.md  UUID_FIX_SUMMARY.md  WASM_BUILD_FIXES.md  ai_test_session.sh  bacon.toml  build_js.sh  build_wasm_bindgen.sh  build_web.sh  build_web_macroquad.sh  cleanup_old_web.sh  debug_release_web.sh  devtabs.toml  devtabs.yaml  diagnose_wasm_build.sh  dynamic_mech_floors_prp.md  justfile  run_release_web.sh  test_ai.sh  test_build.sh  test_minimal_wasm.sh  test_multiplayer.sh  test_release_web_now.sh  test_wasm_complete.sh  test_wasm_release.sh  wasm_build_errors.sh
.cargo/: config.toml
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/epics/menu-interface/: 10.md  11.md  12.md  3-analysis.md  3.md  4.md  5.md  6.md  7-analysis.md  7.md  8.md  9.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/menu-interface/updates/3/: stream-A.md  stream-B.md
.claude/epics/menu-interface/updates/6/: stream-a.md  stream-b.md  stream-c.md  stream-d.md
.claude/epics/menu-interface/updates/7/: agents.env  stream-a.md  stream-b.md  stream-c.md
.claude/prds/: menu-interface.md
.devcontainer/: Dockerfile  README.md  claude-mcp-config.json  devcontainer.json  test-playwright-mcp.sh
.github/workflows/: deploy-pages.yml
ai/: Cargo.toml
ai/src/: communication.rs  decision.rs  hats.rs  interface.rs  lib.rs  logging.rs  perception.rs  personality.rs  utility.rs
client/: Cargo.toml  Trunk.toml  build-demo.sh  build-simple.sh  build-wasm.sh  index-macroquad.html  index.html  miniquad-gl.js  network_bindings.js
client/src/: app_state.rs  app_state_integration_test.rs  debug_overlay.rs  demo_mode.rs  floor_manager.rs  game_state.rs  input.rs  main.rs  network.rs  network_common.rs  network_trait.rs  network_web.rs  network_web_macroquad.rs  network_web_stub.rs  profiler.rs  rendering.rs  settings.rs  spatial_testing.rs  tracing_profiler.rs  vision.rs
client/src/rendering/: camera.rs  effects.rs  hybrid_tiles.rs  mech_interior.rs  mod.rs  pilot_station.rs  primitives.rs  spatial_debug.rs  ui.rs  utils.rs  world.rs
client/src/settings/: mod.rs  widget_factory.rs  widgets.rs
concept_library/cc_PRP_flow/PRPs/: mech_spatial_positioning_v1.md
debug-client/: Cargo.toml
debug-client/src/: main.rs  network.rs
docs/: AI_PLAYERS_DESIGN.md  HYBRID_TILE_ENTITY_SYSTEM.md  MECH_INTERIOR_DESIGN.md  TILE_ABSTRACTION_DESIGN.md
examples/: hybrid_demo.rs
server/: Cargo.toml
server/src/: client.rs  commands.rs  entity_storage.rs  game.rs  game_hybrid.rs.bak  game_tests.rs  game_world.rs  hybrid_integration.rs  main.rs  mech_generation.rs  movement.rs  physics.rs  player_manager.rs  spatial_collision.rs  testing_modes.rs
server/src/systems/: ai.rs  collision.rs  combat.rs  mod.rs  networking.rs  physics.rs  resource.rs  tile_behavior.rs
shared/: Cargo.toml
shared/src/: balance.rs  collision.rs  components.rs  constants.rs  coordinates.rs  errors.rs  lib.rs  mech_coordinates.rs  mech_layout.rs  messages.rs  network.rs  network_constants.rs  object_pool.rs  protocol.rs  render_constants.rs  spatial.rs  stations.rs  tile_entity.rs  tile_math.rs  tile_migration.rs  types.rs  uuid_gen.rs  validation.rs  vision.rs
web_build/: index.html  network_bindings.js  serve.py
