[workspace]
members = ["ai", "client", "server", "shared", "debug-client"]
resolver = "2"

[workspace.dependencies]
# Only truly shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "1.10", features = ["serde"] }  # No "v4" feature - let each crate add what it needs
thiserror = "1.0"
anyhow = "1.0"

# Profiling dependencies
profiling = "1.0"
