[workspace]
members = ["ai", "client", "server", "shared", "debug-client"]
resolver = "2"

[workspace.dependencies]
# Only truly shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
log = "0.4"
uuid = { version = "1.10", features = ["serde"] }  # No "v4" feature - let each crate add what it needs
thiserror = "1.0"
anyhow = "1.0"

# Profiling dependencies
profiling = "1.0"

# Tracing dependencies for structured profiling
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.4"

# Profile for optimized debug builds - smaller binaries but still debuggable
[profile.debug-opt]
inherits = "dev"
opt-level = 2              # Enable optimizations for performance
debug = true               # Keep debug symbols for profiling
lto = "thin"              # Thin LTO for better optimization without excessive compile time
panic = "abort"           # Smaller binaries by avoiding unwinding
strip = false             # Keep debug symbols
overflow-checks = true   # Disable overflow checks for performance

# Additional optimizations for WASM specifically
[profile.debug-opt.package."*"]
opt-level = 2
