[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.42", features = ["sync", "rt"] }
anyhow = "1.0"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
