[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
log = { workspace = true }
tokio = { version = "1.42", features = ["sync", "rt"] }
anyhow = { workspace = true }
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
