[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
required-features = ["native"]

[dependencies]
shared = { path = "../shared" }
macroquad = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
url = "2.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { workspace = true }
ws = { version = "0.9" }
env_logger = "0.11"

# WebAssembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.10", features = ["serde"] }  # No "v4" or "js" features - avoid wasm-bindgen
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType", "console"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = ["native"]
native = []
web = []