[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
required-features = ["native"]

[dependencies]
shared = { path = "../shared" }
macroquad = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
url = "2.5"

# Profiling dependencies
profiling = { workspace = true, optional = true }

# Tracing dependencies for structured profiling
tracing = { git = "https://github.com/AngelOnFira/tracing", optional = true }
tracing-subscriber = { git = "https://github.com/AngelOnFira/tracing", optional = true }
# tracing-subscriber = { workspace = true, optional = true }
tracing-tree = { git = "https://github.com/AngelOnFira/tracing-tree", optional = true }
wasm-timer = "0.2.5"

# EGUI dependencies
egui = "0.31"
egui-macroquad = "0.17.3"
egui_plot = "0.31"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { workspace = true }
ws = { version = "0.9" }
env_logger = "0.11"
log = { workspace = true }

# WebAssembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.10", features = ["serde"] } # No "v4" or "js" features - avoid wasm-bindgen
tracing-wasm = { git = "https://github.com/angelonfira/tracing-wasm", optional = true }
wee_alloc = "0.4.5"

[features]
default = ["native", "profiling"]
native = []
web = []
profiling = ["dep:profiling", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-tree"]
profiling-wasm = ["profiling", "dep:tracing-wasm"]
