[package]
name = "debug-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
ai = { path = "../ai" }
egui = "0.29"
eframe = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
ws = "0.9"
tokio = { version = "1.42", features = ["full"] }
chrono = "0.4"