[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
ai = { path = "../ai" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
log = { workspace = true }
env_logger = { workspace = true }
futures = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"