[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
ai = { path = "../ai" }
# Server-specific dependencies
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
env_logger = "0.11"
rand = "0.8"
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
log = { workspace = true }
futures = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"