[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
macroquad = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.10", features = ["serde", "v4", "js"] }